fixed services sizing element overflow issue.

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ footer {
 .contact .contact-content {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
+    align-content: center;
+    justify-content: space-between;
 }
 
 section .title {
@@ -317,13 +317,19 @@ section .title::after {
     content: "what i provide";
 }
 
+.services .serv-content{
+    display: flex;
+    
+    
+}
+
 .services .serv-content .card {
     width: calc(33% - 20px);
-    /* display: flex; */
     background: #222;
     text-align: center;
     border-radius: 6px;
     padding: 50px 25px;
+    overflow: hidden;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -736,4 +742,8 @@ footer span a:hover {
         line-height: 38px;
     }
 }
+
+
+
+
 
